<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventRemainder</string>
    <string name="action_settings">Settings</string>
    <string name="name">your buddy name</string>
    <string name="number">09393487654</string>
    <string name="message">type your message here</string>
    <string name="photo">your buddy photo</string>
    <string name="Pick">Pick</string>
    <string name="ringtone">ringtone</string>
    <string name="time">time</string>
    <string name="event">type the event here</string>
    <string name="Message">message</string>
    <string name="call">call</string>
    <string name="stop">stop</string>
    <string name="alarminsilentmode">alarm in silent mode</string>
    <string name="save">save</string>
    <string name="volume">volume</string>
    <string name="alarmtime">default alarm time</string>
    <string name="eventdate">event date:</string>

</resources>
