<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="end"
    android:onClick="browseimages" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1141dp" >

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="44dp"
                android:ems="10"
                android:hint="@string/message" />

            <EditText
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:ems="10"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/datePicker1"
                android:layout_marginTop="62dp"
                android:layout_toLeftOf="@+id/ringpick"
                android:ems="10"
                android:hint="@string/event" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/ringpick"
                android:layout_below="@+id/timePicker1"
                android:layout_marginTop="13dp"
                android:text="" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/datePicker1"
                android:layout_below="@+id/checkBox1"
                android:layout_marginTop="15dp"
                android:text="@string/eventdate"
                android:textSize="25sp" />

            <DatePicker
                android:id="@+id/datePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/time"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="24dp"
                android:calendarViewShown="false" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/checkBox1"
                android:layout_alignBottom="@+id/checkBox1"
                android:layout_alignLeft="@+id/textView2"
                android:text="@string/alarminsilentmode"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/rtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/event"
                android:layout_below="@+id/number"
                android:layout_marginTop="16dp"
                android:hint="@string/ringtone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/ringpick"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/number"
                android:layout_marginRight="37dp"
                android:onClick="pickring"
                android:text="@string/Pick" />

            <Button
                android:id="@+id/numberpick"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/ringpick"
                android:layout_below="@+id/message"
                android:onClick="pickcontact"
                android:text="@string/Pick" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ringpick"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/time"
                android:layout_below="@+id/time" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>