<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hui"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <Button
        android:id="@+id/butto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/butto1"
        android:layout_alignBottom="@+id/butto1"
        android:layout_centerHorizontal="true"
        android:text="@string/call" />

    <Button
        android:id="@+id/butto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/butto2"
        android:layout_alignBottom="@+id/butto2"
        android:layout_alignParentRight="true"
        android:text="@string/Message" />

    <TextView
        android:id="@+id/textVie1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textVie1"
        android:layout_marginTop="22dp"
        android:text="@string/stop" />

</RelativeLayout>
